# mini_project_1

./: .env.example  README.md  pyproject.toml  requirements.txt  run_backend.py  users.db
backend/: __init__.py
backend/db/: __init__.py
backend/db/models/: __init__.py  article.py  atricle.py  author.py  comment.py  role.py  user.py
backend/loggers/: loggers.py  middleware.py
backend/logging/: loggers.py  middleware.py
backend/routes/: __init__.py  admin.py  article.py  auth.py
backend/schemas/: __init__.py  articlerequest.py  atricle.py  author.py  comment.py
backend/utils/: __init__.py  hash_pwd.py  oauth2.py
frontend/: __init__.py
frontend/routes/: __init__.py  defult.py
frontend/templates/: base.html  login.html
