[tool.poetry]
name = "mini project"
version = "0.1.0"
description = "fast api mini-project"
authors = ["leonidig <leonid200955@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
fastapi = "^0.115.4"
sqlalchemy = "^2.0.36"
jwt = "^1.3.1"
pyjwt = "^2.9.0"
python-multipart = "^0.0.17"
python-dotenv = "^1.0.1"
uvicorn = "^0.32.0"
pydantic = {extras = ["email"], version = "^2.9.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
